# 6502emulator

./: .gitignore  Cargo.toml  README
rom/: generate.py
src/: main.rs
src/cpu/: bus.rs  instructions.rs  memory.rs  mod.rs
src/devices/: output.rs
